--- a/assets/less/base.less
+++ b/assets/less/base.less
@@ -3,3 +3,27 @@
   text-overflow: ellipsis;
   overflow: hidden;
 }
+img {
+  max-width: 100%;
+}
+[aspectratio] {
+  position: relative;
+  width: 100%;
+}
+[aspectratio]::before {
+  content: '';
+  display: block;
+  width: 1px;
+  margin-left: -1px;
+  height: 0;
+}
+
+[aspectratio-content] {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
