--- a/assets/less/base.less
+++ b/assets/less/base.less
@@ -1,3 +1,6 @@
+body {
+  color: @font-primary-color;
+}
 .ellipsis {
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -26,4 +29,10 @@ img {
   bottom: 0;
   width: 100%;
   height: 100%;
+}
+.align-center {
+  text-align: center;
+}
+.pointer {
+  cursor: pointer;
 }
