--- a/assets/less/base.less
+++ b/assets/less/base.less
@@ -66,6 +66,7 @@ img {
   }
   padding: 0 0 100px 18px !important;
   .img-font-items {
+    overflow: hidden;
     &:nth-child(3n) {
       padding-right: 18px !important;
     }
