--- a/assets/less/base.less
+++ b/assets/less/base.less
@@ -124,12 +124,40 @@ img {
     line-height: 192px - @status-height;
     .van-nav-bar__title {
       line-height: 1.2;
+      color: @font-white-color;
+      max-width: 100%;
+    }
+    .van-icon, .iconfont {
+      color: #fff;
+    }
+    .title {
+      margin: 0 134px 0 162px;
+    }
+    .left {
+      padding: 0 46px 0 53px;
+      i {
+        font-size: 60px;
+      }
+    }
+    .van-nav-bar__right {
+      right: 0;
+    }
+    .right {
+      padding: 0 53px 0 0;
+      i {
+        font-size: 60px;
+        vertical-align: middle;
+      }
+    }
+    .van-nav-bar__left {
+      left: 0;
     }
     .name {
       font-size: 48px;
     }
     .auth {
       font-size: 36px;
+      margin-top: 5px;
     }
   }
 }
