--- a/assets/less/base.less
+++ b/assets/less/base.less
@@ -132,6 +132,7 @@ img {
     }
     .title {
       margin: 0 134px 0 162px;
+      overflow: hidden;
     }
     .left {
       padding: 0 46px 0 53px;
