--- a/assets/less/base.less
+++ b/assets/less/base.less
@@ -159,6 +159,11 @@ img {
     .auth {
       font-size: 36px;
       margin-top: 5px;
+      i  {
+        font-size: 36px;
+        vertical-align: -4px;
+        display: inline-block;
+      }
     }
   }
 }
